--- a/l10n/bundle.l10n.ru.json
+++ b/l10n/bundle.l10n.ru.json
@@ -1,6 +1,6 @@
 {
-  "error.parsingDocument": "Ошибка разбора документа: {0}",
-  "error.loadingSchema": "Ошибка загрузки схемы: {0}",
-  "error.cantFindImportedSchema": "Не удалось найти импортированную схему: {0}",
-  "error.cantLoadImportedSchema": "Не удалось загрузить импортированную схему: {0}"
+  "Error parsing document: {0}": "Ошибка разбора документа: {0}",
+  "Error loading schema: {0}": "Ошибка загрузки схемы: {0}",
+  "Can't find imported schema: {0}": "Не удалось найти импортированную схему: {0}",
+  "Can't load imported schema: {0}": "Не удалось загрузить импортированную схему: {0}"
 } 
